# getdocs

./: .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  PRIVACY.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  publish.yml
docs/: USAGE.md
docs/adr/: 0001-layered-cli-first.md  0002-subprocess-per-crawl.md  0003-canonical-recorded-not-honored.md  0004-layered-order-signals.md  0005-assets-exempt-from-scope.md  0006-source-first-clone-over-crawl.md  0007-agent-integration-is-the-cli-not-an-mcp-surface.md
plugins/getdocs/.claude-plugin/: plugin.json
plugins/getdocs/commands/: getdocs.md
scripts/: fix_encoded_names.py  serve_mkdocs.py
skills/getdocs/: SKILL.md
src/getdocs/: __main__.py  api.py  cli.py  config.py  engine.py  extract.py  identity.py  jobs.py  navharvest.py  outcome.py  output.py  scope.py  sitemap.py  source.py  urlnorm.py
tests/: conftest.py  test_api.py  test_cli.py  test_crawl_e2e.py  test_docs.py  test_extract.py  test_extract_pipeline.py  test_identity.py  test_identity_e2e.py  test_jobs.py  test_jsonl_e2e.py  test_jsonl_output.py  test_limits_errors_e2e.py  test_media_e2e.py  test_navharvest.py  test_navorder_e2e.py  test_output.py  test_plugin_manifest.py  test_politeness_e2e.py  test_relink_e2e.py  test_render_e2e.py  test_resume_e2e.py  test_scope.py  test_shell_detection.py  test_sitemap.py  test_sitemap_e2e.py  test_source.py  test_summary_clone_e2e.py  test_summary_e2e.py  test_traversal_e2e.py  test_urlnorm.py  test_webhook_api.py  test_ws_api.py
tests/fixtures/: basic_docs_page.html  docusaurus.html  gitbook.html  mintlify.html  mkdocs.html  spa_shell.html  sphinx.html
